tests/test_files_pa3/errors/MethodsCallTestBad.ic
class A {}

class B extends A {}

class C
{
	
	static void main(string[] args) { }

	static A foo(int x, string y, boolean z, A a)
	{
		return a;
	}
	
}

class D
{

	A bar(int x, string y, boolean z, A a)
	{
		return a;
	}
	
}

class E
{
	A goo(int x)
	{
		D d = new D();
		B b = new B();
		A a;
		
		a = 
			C.foo(true, "h", false, b);
		a = 
			C.foo(2, "h", false, 8);
		a = 
			C.foo(2, 8, false, b);
		d = C.foo(2, "h", false, b);
		a = 
			d.bar(true, "h", false, b);
		a = 
			d.bar(2, "h", false, 8);
		a = 
			d.bar(2, 8, false, b);
		d = d.bar(2, "h", false, b);
		a = 
			x.bar(2, "h", false, b);
		a = 
			d.foo(2, "h", false, b);
			
		C c = new C();
		
		a = 
			c.foo(2, "h", false, b);	
		a = 
			d.bar(2, "h", false);
		a = 
			C.foo(2, false, b);
		
		return d;
	}
	
	void zoo(int x)
	{
		return x;
	}
	
	int loo(int x)
	{
		return;
	}
}